--- a/README
+++ b/README
@@ -1,8 +1,50 @@
 ############################################
-##		Java Mailer Application for J2SE  ##
+
+    Java Mailer Application for J2SE 
+  
 ############################################
 
 @author : harshadura
 www.harshadura.com
 
+-------------------------------------------
 
+package com.dura.mymailapp;
+
+import java.util.Date;
+import javax.mail.Message;
+import javax.mail.Session;
+import javax.mail.Transport;
+import javax.mail.internet.InternetAddress;
+import javax.mail.internet.MimeMessage;
+
+public class Mailer {
+
+    public boolean Sender(String to, String subject1, String message1) {
+        String from = "mailerjar@gmail.com";
+        String pwd = "1100pass";
+        String host = "smtp.gmail.com";
+        java.util.Properties props = System.getProperties();
+        props.put("mail.smtp.user", from);
+        props.put("mail.smtp.host", host);
+        props.put("mail.smtp.port", "587");
+        props.put("mail.smtp.starttls.enable", "true");
+        props.put("mail.smtp.auth", "true");
+        props.put("mail.debug", "true");
+        Session session = Session.getInstance(props, new com.dura.mymailapp.MyAuth(from, pwd));
+        try {
+            Message msg = new MimeMessage(session);
+            msg.setFrom(new InternetAddress(from));
+            InternetAddress[] address = {new InternetAddress(to)};
+            msg.setRecipients(Message.RecipientType.TO, address);
+            msg.setSubject(subject1);
+            msg.setSentDate(new Date());
+            msg.setText(message1);
+            Transport.send(msg);
+
+            return true;
+        } catch (Exception e) {
+            return false;
+        }
+    }
+}
